# agentic-ai-

./: README.md
google-ADK-quiz-generator/: README.md  pyproject.toml
google-ADK-quiz-generator/diagrams/: diagram.md
google-ADK-quiz-generator/src/adk_quiz_generator/: content_brief.md  main.py  quiz_output.docx  quiz_output.json
google-ADK-quiz-generator/src/adk_quiz_generator/agents/: __init__.py  prompts.py
google-ADK-quiz-generator/src/adk_quiz_generator/config/: models.py
google-ADK-quiz-generator/src/adk_quiz_generator/tools/: file_tools.py  search_tool.py  web_scraper.py  word_tools.py
mycrew/: .gitignore  README.md  pyproject.toml
mycrew/outputs/: review.txt  solution.py
mycrew/src/mycrew/: crew.py  main.py
mycrew/src/mycrew/config/: agents.yaml  tasks.yaml
mycrew/src/mycrew/tools/: custom_tool.py
mycrew1/: README.md  pyproject.toml
mycrew1/outputs/: trip_plan.txt
mycrew1/src/mycrew1/: crew.py  main.py
mycrew1/src/mycrew1/config/: agents.yaml  tasks.yaml
mycrew1/src/mycrew1/tools/: custom_tool.py
quiz_generator/: content_brief.md  final_quiz.docx  generated_quiz.json  pyproject.toml
quiz_generator/src/quiz_generator/: main.py
quiz_generator/src/quiz_generator/crews/content_acquistion/: content_acquistion.py
quiz_generator/src/quiz_generator/crews/content_acquistion/config/: agents.yaml  tasks.yaml
quiz_generator/src/quiz_generator/crews/quiz_generation/: quiz_generation.py
quiz_generator/src/quiz_generator/crews/quiz_generation/config/: agents.yaml  tasks.yaml
quiz_generator/src/quiz_generator/crews/review_and_format/: review_and_format.py
quiz_generator/src/quiz_generator/crews/review_and_format/config/: agents.yaml  tasks.yaml
quiz_generator/src/quiz_generator/tools/: custom_tool.py  word_output_tool.py
