[project]
name = "mycrew"
version = "0.1.0"
description = "mycrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
mycrew = "mycrew.main:run"
run_crew = "mycrew.main:run"
train = "mycrew.main:train"
replay = "mycrew.main:replay"
test = "mycrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.crewai.tools]
file_saver = "mycrew.tools.custom_tool.FileSaverTool"
