[project]
name = "mycrew1"
version = "0.1.0"
description = "mycrew1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
mycrew1 = "mycrew1.main:run"
run_crew = "mycrew1.main:run"
train = "mycrew1.main:train"
replay = "mycrew1.main:replay"
test = "mycrew1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.crewai.tools]
file_writer_tool = "mycrew1.tools.file_writer_tool.FileWriterTool"