[project]
name = "quiz_generator"
version = "0.1.0"
description = "quiz_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.2.0",
    "requests",
    "beautifulsoup4",
    "litellm",
]

[project.scripts]
kickoff = "quiz_generator.main:kickoff"
run_crew = "quiz_generator.main:kickoff"
plot = "quiz_generator.main:plot"
run_with_trigger = "quiz_generator.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
